--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,8 +4,13 @@ footer {
     width: 100%;
     border-top: 1px solid #CCCCCC;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     position: fixed;
     bottom: 0;
 }
+
+footer p {
+    margin: 0;
+}
+
